# sifter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-crate-bin.yaml  build-py-wheel.yaml  ci.yaml  release-maturin.yml  release.yaml
sifter/: Cargo.toml
sifter-cli/: Cargo.toml
sifter-cli/src/: main.rs
sifter-py/: Cargo.toml  pyproject.toml
sifter-py/src/: lib.rs
sifter-py/src/py_types/: exp.rs  jsonobj.rs  var.rs
sifter/src/: errors.rs  functions.rs  interpreter.rs  lib.rs  main.rs  parser.rs  types.rs
sifter/src/types/: env.rs  exp.rs  func.rs  jsonobj.rs  literal.rs  mod.rs  var.rs
sosaku/: Cargo.toml  README.md
sosaku-cli/: Cargo.toml  README.md
sosaku-cli/src/: main.rs
sosaku-py/: Cargo.toml  README.md  pyproject.toml  sosaku.pyi
sosaku-py/src/: errors.rs  lib.rs
sosaku-py/src/py_types/: exp.rs  jsonobj.rs  mod.rs  var.rs
sosaku-py/tests/: test_exp.py
sosaku/src/: errors.rs  functions.rs  interpreter.rs  lib.rs  parser.rs  utils.rs
sosaku/src/types/: env.rs  exp.rs  func.rs  json.rs  literal.rs  mod.rs  value.rs  var.rs
src/: functions.rs  interpreter.rs  lib.rs  main.rs  parser.rs  types.rs
