[package]
name = "sifter-cli"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
sifter = { path = "../sifter" }
clap = { version = "4.5.60", features = ["derive"] }
