[package]
name = "sifter-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Querying JSON data from the command line"

[lints]
workspace = true

[dependencies]
sifter = { path = "../sifter", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "sifter"
path = "src/main.rs"
