[package]
name = "sifter-py"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for a JSON Query language"

[lints]
workspace = true

[lib]
name = "sifter_py"
crate-type = ["cdylib"]

[dependencies]
sifter = { path = "../sifter" }
pyo3 = "0.28"
