[package]
name = "sifter"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
nom = "8.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
