[package]
name = "sosaku-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Querying JSON data from the command line"

[lints]
workspace = true

[dependencies]
sosaku = { path = "../sosaku", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "sosaku"
path = "src/main.rs"
