[package]
name = "sosaku-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "CLI for the sosaku JSON Query language"

[lints]
workspace = true

[dependencies]
sosaku = { workspace = true, features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "sosaku"
path = "src/main.rs"
