[package]
name = "sosaku-py"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Python bindings for a JSON Query language"

[lints]
workspace = true

[lib]
name = "sosaku"
crate-type = ["cdylib"]

[dependencies]
sosaku = { path = "../sosaku" }
pyo3 = "0.28"
