[package]
name = "sosaku-py"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Python bindings for the sosaku JSON Query language"

[lints]
workspace = true

[lib]
name = "sosaku"
crate-type = ["cdylib"]

[dependencies]
sosaku.workspace = true
pyo3 = "0.28"
