[package]
name = "sosaku"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Filtering DSL for JSON and JSON-like data formats."

[lints]
workspace = true

[dependencies]
nom = "8.0"
regex = "1.12"
thiserror = "2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }


[features]
serde = ["dep:serde", "dep:serde_json"]
