[package]
name = "sosaku"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "Filtering DSL for JSON and JSON-like data formats."

[lints]
workspace = true

[dependencies]
nom = "8.0"
regex = "1.12"
thiserror = "2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }
futures = "0.3.32"

[dev-dependencies]
tokio = { version = "1", features = ["full", "parking_lot"] }

[features]
# Enable the use of serde_json types in bindings
serde_json = ["dep:serde", "dep:serde_json"]
# Convenience alias for 'serde_json'
serde = ["serde_json"]
# Adds 'sosaku::normalize_into_json' function for converting serde_yaml::Value to serde_json::Value
serde_yaml = ["serde", "dep:serde_yaml"]
